bug 10632 better scrollbar buttons + highlight adding search services r=me
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@10432 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/gonzo/chrome/skin/colors.css
+++ b/feathers/gonzo/chrome/skin/colors.css
@@ -2424,3 +2424,8 @@ wizard {
 #sb-playlist-filters {
   min-height:60px;
 }
+
+
+.addengine-item {
+  background-color:rgb(255,255,215);
+}
